tests/NormalTests/paczka1/small_fuzzy/84948658.err
Error in line 1: 8HcCzjNDkY A2 28,8
Error in line 4: Lxi3Mk S796 26,7
Error in line 3: 8HcCzjNDkY S442 31,2
